SUBDIRS = decoder encoder img po

bin_PROGRAMS = aqualung

aqualung_SOURCES = \
about.h about.c \
build_store.h build_store.c \
common.h \
cdda.h cdda.c \
cddb_lookup.h cddb_lookup.c \
cd_ripper.h cd_ripper.c \
core.h core.c \
cover.h cover.c \
export.h export.c \
file_info.h file_info.cpp \
gui_main.h gui_main.c \
httpc.h httpc.c \
i18n.h \
ifp_device.h ifp_device.c \
loop_bar.h loop_bar.c \
metadata.h metadata.c \
meta_decoder.h meta_decoder.cpp \
music_browser.h music_browser.c \
options.h options.c \
playlist.h playlist.c \
plugin.h plugin.c \
ports.h ports.c \
rb.h rb.c \
search.h search.c \
search_playlist.h search_playlist.c \
segv.h segv.c \
skin.h skin.c \
store_cdda.h store_cdda.c \
store_file.h store_file.c \
transceiver.c transceiver.h \
trashlist.c trashlist.h \
utils.c utils.h \
utils_gui.c utils_gui.h \
version.h \
volume.c volume.h
